Fix contrast ratio warnings, was so close already

--- a/_includes/index.scss
+++ b/_includes/index.scss
@@ -191,7 +191,7 @@ body {
     // Formerly &-text
     p {
       margin: 0;
-      opacity: 0.75;
+      opacity: 0.76;
       font-size: 15px;
     }
   }
